# toon_aks_evaluation

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_TODO.md  INSIGHTS.md  LEGAL_CASE_TOON_ANALYSIS.md  QUALITY-ANALYSIS.md  README.md  SECURITY.md  analytics_dashboard.py  app.py  flask_app.py  legal_case_data.js  package-lock.json  package.json  pyproject.toml  test_flask.py  test_legal_case_toon.js  toon-cost-analysis.js  toon-quality-test.js  toon-quick-demo.js
config/: adicr_targets.json
docs/: CACHE_TESTING_GUIDE.md  README.md
hooks/: pre-commit
scripts/: aggregate_classifications.py  aggregate_multilabel_classifications.py  aggregate_multilabel_v2_classifications.py  benchmark_ground_truth.py  benchmark_paddleocr.py  classify_documents.py  compare_multilabel_v1_v2.py  compare_prompt_on_text.py  compare_prompt_versions.py  generate_adicr_report.py  ingest_metadata_to_duckdb.py  list_providers.py  query_duckdb.py  test_document_cache.py  test_email_parser.py  test_eml_baseline.py  test_eml_integration.py  test_gemini_direct_json.py  test_gpt5_availability.py  test_gpt5_extraction.py  test_image_extraction.py  test_image_format_validation.py  test_langextract_v1_v2.py  test_new_oss_models.py  test_ocr_fallback.py  test_openrouter.py  test_runtime_model.py  test_tiktoken_integration.py  verify_gpt5_adapter.py
src/: main.py
templates/: index.html  results.html
test_documents/: abc_xyz_contract_dispute.txt
tests/: __init__.py  test_adicr_report.py  test_api_fastapi.py  test_classification_prompt.py  test_cost_estimator.py  (+8 more)
(+127 files in other folders)
